# openenclave

./: .gitattributes  CMakeLists.txt
api/: annotated.html  classes.html  enclave_8h.html  enclave_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_type.html  host_8h.html  host_8h__incl.md5  host_8h_source.html  report_8h.html  report_8h_a2b338bee894e153389ce35a08a494b52.html  report_8h_a445fd88b3d209d8456e85a2c2fbebb43.html  report_8h_a56870385dcc823e03c80cd66cd42625c.html  report_8h_a82c5bf0cacb3810016e2ff21d8570750.html  report_8h_ae25693bea0e36f79769455d6e6de59cd.html  report_8h_aeb7315f5ba69737a3935d65f7cf0675b.html  report_8h_source.html  struct__oe__claim.html  struct__oe__policy.html  struct__oe__uuid__t.html  types_8h.html
api/search/: all_9.js
enclave/: CMakeLists.txt
enclave/core/: CMakeLists.txt
enclave/core/sgx/: calls.c  exception.c  td.c  td_basic.c
enclave/crypto/: CMakeLists.txt
host/sgx/: create.c  enter.c
libc/: CMakeLists.txt
samples/: CMakeLists.txt
samples/attested_tls/: Dockerfile  README.md  build.sh  cleanup.sh  run_non_enc_client.sh  server.yaml  sgx-dp.yaml
scripts/: .check-license.ignore
scripts/code-coverage/: lcov_cobertura
syscall/: CMakeLists.txt
syscall/devices/hostepoll/: CMakeLists.txt
syscall/devices/hostfs/: CMakeLists.txt
syscall/devices/hostresolver/: CMakeLists.txt
syscall/devices/hostsock/: CMakeLists.txt
tests/: CMakeLists.txt
tests/atexit/enc/: enc.cpp
tests/libc/: CMakeLists.txt
tests/libcxxrt/: CMakeLists.txt
tests/syscall/: CMakeLists.txt
(+14 files in other folders)
